install/envoy-config-helm-values.yaml
files:
  envoy.yaml: |-
    ## refs:
    ## - https://www.envoyproxy.io/docs/envoy/latest/start/start#quick-start-to-run-simple-example
    ## - https://raw.githubusercontent.com/envoyproxy/envoy/master/configs/google_com_proxy.v2.yaml
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 10000 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              stream_idle_timeout: 0s
              route_config:
                name: grpc_routes
                virtual_hosts:
                - name: grpc_local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/loginservice.LoginService" }
                    route:
                      cluster: authorization-service-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/executionvenue.ExecutionVenue" }
                    route:
                      cluster: order-router-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/marketdataservice.MarketDataService" }
                    route:
                      cluster: market-data-service-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/orderdataservice.OrderDataService" }
                    route:
                      cluster: order-data-service-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/staticdataservice.StaticDataService" }
                    route:
                      cluster: static-data-service-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/ordermonitor.OrderMonitor" }
                    route:
                      cluster: order-monitor-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/clientconfigservice.ClientConfigService" }
                    route:
                      cluster: client-config-service-cluster
                      max_grpc_timeout: 0s
                  - match: { prefix: "/" }
                    route:
                      cluster: opentp-client-cluster         
                    per_filter_config:
                      envoy.ext_authz:
                        disabled: true
                      envoy.grpc_web:
                        disabled: true      
                  cors:
                    allow_origin:
                    - "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,user-name,app-instance-id,auth-token
                    max_age: "1728000"
                    expose_headers: custom-header-1,grpc-status,grpc-message
              http_filters:
              - name: envoy.cors
              - name: envoy.ext_authz
                config:
                  grpc_service:
                    envoy_grpc:
                      cluster_name: ext-authz
                    timeout: 0.5s              
              - name: envoy.grpc_web
              - name: envoy.router
      clusters:      
      - name: opentp-client-cluster
        connect_timeout: 0.25s
        type: logical_dns
        lb_policy: round_robin
        hosts: [{ socket_address: { address: opentp-client.default, port_value: 80 }}]  
      - name: authorization-service-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: authorization-service.default, port_value: 50551 }}]
      - name: market-data-service-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: market-data-service.default, port_value: 50551 }}]
      - name: order-data-service-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: order-data-service.default, port_value: 50551 }}]
      - name: order-router-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: order-router.default, port_value: 50581 }}]
      - name: static-data-service-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: static-data-service.default, port_value: 50551 }}]
      - name: order-monitor-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: order-monitor.default, port_value: 50551 }}]
      - name: client-config-service-cluster
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: client-config-service.default, port_value: 50551 }}]
      - name: ext-authz
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: authorization-service.default, port_value: 4000 }}]
service:
  enabled: true
  name: envoy
  type: NodePort
  ports:
    http:
      port: 10000
      targetPort: 10000
      protocol: TCP
    admin:
      port: 9901
      targetPort: 9901
      protocol: TCP
